--- a/css/style.css
+++ b/css/style.css
@@ -110,18 +110,16 @@ body {
     width: 50%;
   }
 }
-/* COFFEE MENU PAGE */
 .content-section {
   display: flex;
   flex-wrap: wrap;
 }
 .content-section .product-card {
-  width: 30%;
   border: #371E08;
   border-width: 0.5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
-  margin: 20px 15px;
+  margin: 20px 30px;
   flex: 1 0 40%;
 }
 .content-section .product-card img {
@@ -129,8 +127,15 @@ body {
   object-fit: cover;
   max-height: 210px;
 }
+.content-section .product-card h1 {
+  color: #371E08;
+}
 .content-section .product-card p {
+  color: #371E08;
   font-size: 20px;
+}
+.content-section .product-card h2 {
+  color: #371E08;
 }
 .content-section .product-card .dropdown {
   display: block;
@@ -815,6 +820,69 @@ hr {
     padding: 10px 30px;
     font-size: 15px;
     margin-bottom: 10px;
+  }
+}
+#topnav .only-icon {
+  display: block;
+  position: absolute;
+  right: 20px;
+  top: 0;
+  font-size: 30px;
+  margin-top: 10px;
+}
+
+.progress-section {
+  color: #371E08;
+}
+.progress-section .in-progress, .progress-section .order-ready {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  text-align: center;
+  line-height: 50px;
+}
+.progress-section .in-progress i, .progress-section .order-ready i {
+  font-size: 50px;
+  margin-right: 30px;
+}
+.progress-section .bars-icon {
+  width: fit-content;
+  margin: auto;
+}
+.progress-section .bars-icon .fa-bars-progress {
+  font-size: 50px;
+}
+.progress-section .order-ready {
+  opacity: 60%;
+}
+.progress-section .return {
+  width: fit-content;
+  margin: auto;
+  margin-top: 30px;
+}
+.progress-section .return a {
+  color: #371E08;
+  text-decoration: none;
+}
+.progress-section .return a:hover {
+  color: #CCC0B6;
+}
+
+@media screen and (max-width: 480px) {
+  .progress-section .in-progress h1, .progress-section .order-ready h1 {
+    font-size: 15px;
+    line-height: normal;
+  }
+  .progress-section .in-progress i, .progress-section .order-ready i {
+    font-size: 30px;
+    margin-right: 15px;
+  }
+  .progress-section .bars-icon .fa-bars-progress {
+    font-size: 30px;
+  }
+  .progress-section .return {
+    font-size: small;
   }
 }
 
